<resources>
    <string name="app_name">GooglePlaces</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery">GalleryActivity</string>

    <string name="place_id_key">place_id</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="title_activity_fullscreen">Fullscreen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Labels for MainActivity -->
    <string name="no_photo_label">There is no photos,please choose another place</string>
    <string name="no_gps_label">The GPS is off, please enable your GPS</string>
    <string name="search_hint">What are you looking for</string>
    <!-- Labels for Buttons in MainActivity -->
    <string name="search_button">search</string>
    <string name="clear_button">clear</string>
    <string name="types_button">types</string>
    <string name="find_me_button">me</string>
    <!-- Labels for Markers in MainActivity -->
    <string name="my_location_label">My location</string>

    <!-- Settings for Mode -->
    <!-- Label for the mode -->
    <string name="pref_mode_label">Mode</string>
    <!-- Label for the Click-and-get mode -->
    <string name="pref_mode_click_and_get_label">Click-and-Get</string>
    <!-- Label for the Specific search mode -->
    <string name="pref_mode_specific_search_label">Specific search</string>

    <!-- Value in SharedPreferences for mode option -->
    <string name="pref_modes_key" translatable="false">modes</string>
    <!-- Value in SharedPreferences for Click-and-get mode  -->
    <string name="pref_mode_click_and_get" translatable="false">click_and_get</string>
    <!-- Value in SharedPreferences for Specific search mode -->
    <string name="pref_mode_specific_search" translatable="false">specific_search</string>

    <!-- Settings for Type -->

    <!-- Label for the type-->
    <string name="pref_type_label">Type</string>
    <!-- Label for the All type -->
    <string name="pref_type_food_label">Food</string>
    <!-- Label for the Establishment type  -->
    <string name="pref_type_establishment_label">Establishment</string>
    <!-- Label for the Restaurant type  -->
    <string name="pref_type_restaurant_label" translatable="false">Restaurant</string>
    <!-- Label for the Cafe type  -->
    <string name="pref_type_cafe_label" translatable="false">Cafe</string>
    <!-- Label for the Museum type  -->
    <string name="pref_type_museum_label" translatable="false">Museum</string>

    <!-- Value in SharedPreferences for type option -->
    <string name="pref_types_key" translatable="false">types</string>
    <!-- Value in SharedPreferences for all  -->
    <string name="pref_type_food" translatable="false">food</string>
    <!-- Value in SharedPreferences for establishment  -->
    <string name="pref_type_establishment" translatable="false">establishment</string>
    <!-- Value in SharedPreferences for restaurant -->
    <string name="pref_type_restaurant" translatable="false">restaurant</string>
    <!-- Value in SharedPreferences for cafe -->
    <string name="pref_type_cafe" translatable="false">cafe</string>
    <!-- Value for museum -->
    <string name="pref_type_museum" translatable="false">museum</string>

    <!-- Label for the radius-->
    <string name="pref_radius_label">Radius</string>

    <!-- Value in SharedPreferences for radius option -->
    <string name="pref_radius_key" translatable="false">radius</string>
    <string name="pref_radius_summary">Choose radius</string>
    <string name="radius_dialog_title">Choose radius</string>

    <!-- Value for extra params -->
    <string name="position" translatable="false">position</string>

    <string name="pref_type_summary">Check types of places</string>
    <string name="setting_store_dialog_title">Check types of places</string>

    <!-- Lables for errors -->
    <string name="timeout_error">The connection or the socket timed out</string>
    <string name="auth_error">There was an authentication failure when performing a Request</string>
    <string name="network_error">There was a network error when performing a Volley request</string>
    <string name="no_connection_error">No connection could be established when performing a Volley request</string>
    <string name="parse_error">The server\'s response could not be parsed.</string>
    <string name="server_error">The server\'s error</string>

</resources>
