<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_mode_label"
        android:key="@string/pref_modes_key"
        android:defaultValue="@string/pref_mode_click_and_get_label"
        android:entryValues="@array/pref_mode_values"
        android:entries="@array/pref_mode_options" />

    <EditTextPreference
        android:key="@string/pref_radius_key"
        android:title="@string/pref_radius_label"
        android:summary="@string/pref_radius_summary"
        android:dialogTitle="@string/radius_dialog_title"
        android:defaultValue="50" />

    <MultiSelectListPreference
        android:key="@string/pref_types_key"
        android:title="@string/pref_type_label"
        android:summary="@string/pref_type_summary"
        android:dialogTitle="@string/setting_store_dialog_title"
        android:entryValues="@array/pref_type_values"
        android:entries="@array/pref_type_options"
        android:defaultValue="@array/pref_type_values" />


</PreferenceScreen>