<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.admin.googleplaces.activities.MainActivity" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:lines="1" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchTask"
                android:text="@string/search_button" />


            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchTask"
                android:text="@string/clear_button" />


            <Button
                android:id="@+id/types_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchTask"
                android:text="@string/types_button" />

            <Button
                android:id="@+id/find_me_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchTask"
                android:text="@string/find_me_button" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>
